logs/dag_id=Fail_Dags_Monitor/run_id=manual__2024-07-05T08:18:45.478464+00:00/task_id=load/attempt=27.log
[2024-07-05T08:51:58.422+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-05T08:51:58.441+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Fail_Dags_Monitor.load manual__2024-07-05T08:18:45.478464+00:00 [queued]>
[2024-07-05T08:51:58.447+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Fail_Dags_Monitor.load manual__2024-07-05T08:18:45.478464+00:00 [queued]>
[2024-07-05T08:51:58.447+0000] {taskinstance.py:2306} INFO - Starting attempt 27 of 29
[2024-07-05T08:51:58.454+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): load> on 2024-07-05 08:18:45.478464+00:00
[2024-07-05T08:51:58.462+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=48849) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-07-05T08:51:58.460+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'Fail_Dags_Monitor', 'load', 'manual__2024-07-05T08:18:45.478464+00:00', '--job-id', '528', '--raw', '--subdir', 'DAGS_FOLDER/fail_dags_monitor.py', '--cfg-path', '/tmp/tmpxh5ipi2s']
[2024-07-05T08:51:58.462+0000] {standard_task_runner.py:63} INFO - Started process 48851 to run task
[2024-07-05T08:51:58.462+0000] {standard_task_runner.py:91} INFO - Job 528: Subtask load
[2024-07-05T08:51:58.486+0000] {task_command.py:426} INFO - Running <TaskInstance: Fail_Dags_Monitor.load manual__2024-07-05T08:18:45.478464+00:00 [running]> on host 0b64c9d791b9
[2024-07-05T08:51:58.531+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='congminh.nguyen@onpoint.vn' AIRFLOW_CTX_DAG_ID='Fail_Dags_Monitor' AIRFLOW_CTX_TASK_ID='load' AIRFLOW_CTX_EXECUTION_DATE='2024-07-05T08:18:45.478464+00:00' AIRFLOW_CTX_TRY_NUMBER='27' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-05T08:18:45.478464+00:00'
[2024-07-05T08:51:58.531+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-05T08:51:58.663+0000] {dagbag.py:545} INFO - Filling up the DagBag from /opt/***/dags
[2024-07-05T08:51:59.283+0000] {logging_mixin.py:188} INFO - Successfully connect to database!
[2024-07-05T08:51:59.480+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-05T08:51:59.481+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/fail_dags_monitor.py", line 80, in load
    c.copy_expert(
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 13:                     ) FROM STDIN WITH CSV
                             ^

[2024-07-05T08:51:59.490+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=Fail_Dags_Monitor, task_id=load, run_id=manual__2024-07-05T08:18:45.478464+00:00, execution_date=20240705T081845, start_date=20240705T085158, end_date=20240705T085159
[2024-07-05T08:51:59.500+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 528 for task load (syntax error at or near ")"
LINE 13:                     ) FROM STDIN WITH CSV
                             ^
; 48851)
[2024-07-05T08:51:59.526+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-05T08:51:59.537+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-05T08:51:59.538+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
